--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				As the stonemason guilds evolved, they attracted members from various fields, including architects, engineers, and scholars. You know I am majoring in engineering, I could be Mason for all you know. And then these Masons from various fields became interested in philosophical and spiritual matters, incorporating symbols and rituals from ancient religions and mystery traditions.
 				In the 17th century, Freemasonry became a more formal organization with lodges and a system of degrees. The lodges are similar to the one right next to our old apartment. I believe its called the Advance Masonic Temple. 				
 			</p>
-			<img src="https://Vsam123.github.io/English1102Project/photos/lodge.png" alt="washington" class="TextWrapLeft">
+			<img src="https://vsam123.github.io/English1102Project/photos/lodge.png" alt="washington" class="TextWrapLeft">
 			<p>However, these lodges began to attract members from all walks of life, including politicians, scientists, and artists. And during the Enlightenment period, Freemasonry became associated with the concepts of liberty, equality, and fraternity.
 				Famous founding fathers of the United States, such as George Washington, Benjamin Franklin, and Paul Revere, were also Freemasons, and they incorporated Masonic symbols and principles into the design of the new nation.				
 			</p>
