--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<main>
 		<section>
 			<h2>History</h2>
-			<img src="https://raw.githubusercontent.com/Vsam123/English1102Project/main/photos/lodge.png" alt="lodge" class="TextWrap">
+			<img src="Vsam123/English1102Project/main/photos/lodge.png" alt="lodge" class="TextWrap">
 			<p>Freemasonry is simply a fraternal organization with a long and intricate history. It is thought to have originated as a guild for stonemasons during medieval Europe. See, Dad? I mean it makes sense. Stone-MASONS? Masonry… Yeah, I’m sure you got it.
 				So basically these stonemasons, who were responsible for constructing some of the grandest cathedrals, castles, and other significant structures, (I know how much you love your architecture, especially cathedrals) developed a system of secret codes and symbols to protect their trade secrets and recognize each other.
 				As the stonemason guilds evolved, they attracted members from various fields, including architects, engineers, and scholars. You know I am majoring in engineering, I could be Mason for all you know. And then these Masons from various fields became interested in philosophical and spiritual matters, incorporating symbols and rituals from ancient religions and mystery traditions.
